Update certificate service logic and make new jks